# morfeus-client

./: .gitignore  About Morfeus app.md  README.md  build-rust.ps1  index.html  package-lock.json  package.json  retry-dev.ps1  run-dev.ps1  tailwind.config.js
.agents/: AGENTS.md
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logger.rs  lsp.rs  main.rs  mcp.rs  models.rs
src-tauri/src/commands/: db.rs  files.rs  llm.rs  mod.rs  rules.rs  settings.rs  voice.rs  web.rs  youtube.rs
src/components/chat/: ChatWindow.tsx  CodeBlock.tsx  MarkdownRenderer.tsx  MessageBubble.tsx
src/components/layout/: RightPanel.tsx  Sidebar.tsx
src/components/settings/: SettingsModal.tsx
src/components/voice/: VoiceButton.tsx
src/hooks/: useChat.ts
src/lib/: api.ts  pdfParser.ts  tauri.ts  utils.ts
src/stores/: chatStore.ts  settingsStore.ts  voiceStore.ts
src/types/: index.ts
