[package]
name = "morfeus"
version = "0.1.8"
description = "Morfeus — Local-First LLM Desktop Client"
authors = ["Morfeus"]
edition = "2021"

[lib]
name = "morfeus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"

# Audio capture for STT
cpal = "0.15"
hound = "3.5"

# HTTP client (for proxying — bypasses CORS entirely)
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
scraper = "0.21"
urlencoding = "2.1"
pdf-extract = "0.7"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
libloading = "0.9.0"
libc = "0.2.186"
async-lsp = { version = "0.2.4", features = ["tokio", "stdio"] }
lsp-types = "0.97.0"
tokio-util = { version = "0.7.19", features = ["compat"] }
yt-transcript-rs = "0.1.8"
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
